--- a/Codes/visu.ipynb
+++ b/Codes/visu.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "100%|██████████| 4/4 [00:00<00:00, 546.04it/s]Applying filter : \n",
+      "100%|██████████| 4/4 [00:00<00:00, 447.29it/s]Applying filter : \n",
       "\n"
      ]
     }
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,8 +89,24 @@
     "    print(f'theta0 du profil brut : {theta0(cn2, alt):.4f} µrad ')\n",
     "    print('\\n')\n",
     "   \n",
-    "\n",
     "    plt.semilogx(cn2, alt, label = 'Raw Cn2 profile')\n",
+    "   \n",
+    "   \n",
+    "    g = interp.interp1d(alt, cn2)\n",
+    "    new_z = np.linspace(alt[0], alt[-1], nbpoints_per_segment*nbsegments)\n",
+    "    plt.semilogx(g(new_z), new_z, label = 'Interpolated Cn2 profile')\n",
+    "    print(f'Integrale du profil interpolé : {simps(g(new_z), new_z)}')\n",
+    "    print(f'r0 du profil interpolé : {r0(g(new_z), new_z):.4f} cm')\n",
+    "    print(f'theta0 du profil interpolé : {theta0(g(new_z), new_z):.4f} µrad ')\n",
+    "    print('\\n')\n",
+    "    plt.xlabel('Cn2')\n",
+    "    plt.ylabel('Alt (m)')\n",
+    "    plt.autoscale(tight=True)\n",
+    "    plt.legend()\n",
+    "   \n",
+    "   \n",
+    "   \n",
+    "   \n",
     "    if nbsegments >1:\n",
     "        split_alt = np.array_split(alt, nbsegments)\n",
     "        split_cn2 = np.array_split(cn2, nbsegments)\n",
@@ -100,22 +116,25 @@
     "    else : \n",
     "        roots, res = interp_gauss_legendre(nbpoints_per_segment, alt, cn2, norm=True)\n",
     "\n",
-    "    plt.semilogx(res, roots, label = 'Interpolated Cn2 profile')\n",
-    "    print(f'Integrale du profil interpolé : {simps(res, roots)}')\n",
-    "    print(f'r0 du profil interpolé : {r0(res, roots):.4f} cm')\n",
-    "    print(f'theta0 du profil brut : {theta0(res, roots):.4f} µrad ')\n",
+    "    plt.semilogx(res, roots, label = 'Legendre Cn2 profile')\n",
+    "    print(f'Integrale du profil Legendre : {simps(res, roots)}')\n",
+    "    print(f'r0 du profil Legendre : {r0(res, roots):.4f} cm')\n",
+    "    print(f'theta0 du profil Legendre : {theta0(res, roots):.4f} µrad ')\n",
     "    print('\\n')\n",
     "    plt.xlabel('Cn2')\n",
     "    plt.ylabel('Alt (m)')\n",
     "    plt.autoscale(tight=True)\n",
     "    plt.legend()\n",
     "\n",
+    "\n",
+    "\n",
     "    plt.subplot(122)\n",
     "    print(f'temps de cohérence du profil brut : {tau0(cn2, wspeed , alt):.4f} sec ')\n",
     "    plt.plot(wspeed, alt, label = 'Wind Speed')\n",
     "    f = interp.interp1d(alt, wspeed)\n",
     "    plt.plot(f(roots), roots, 'ro--', label = 'Interpolated Wind Speed')\n",
-    "    print(f'temps de cohérence du profil interpolé : {tau0(res, f(roots), roots):.4f} sec ')\n",
+    "    print(f'temps de cohérence du profil interpolé : {tau0(res, f(new_z), new_z):.4f} sec ')\n",
+    "    print(f'temps de cohérence du profil Legendre : {tau0(res, f(roots), roots):.4f} sec ')\n",
     "    plt.xlabel('Win Speed (m.s^-1')\n",
     "    plt.ylabel('Alt (m)')\n",
     "    plt.autoscale(tight=True)\n",
@@ -130,7 +149,7 @@
    "metadata": {
     "tags": []
    },
-   "execution_count": 32,
+   "execution_count": 19,
    "outputs": [
     {
      "output_type": "display_data",
@@ -139,7 +158,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "75c4edefcc4341388e42dff49dc20d22"
+       "model_id": "c25f0a2fa7554e9a9ac4ba090ebe8ec5"
       }
      },
      "metadata": {}
@@ -152,8 +171,39 @@
       ]
      },
      "metadata": {},
-     "execution_count": 32
+     "execution_count": 19
     }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    alt = data[date].alt.values\n",
+    "    cn2 = data[date].Cn2.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "5514"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "len(alt)"
    ]
   },
   {
