--- a/Codes/visu.ipynb
+++ b/Codes/visu.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "from Legendre import *\n",
-    "from Library import * \n",
+    "from CACTUS import * \n",
     "from ipywidgets import interact\n",
     "import scipy.interpolate as interp"
    ]
@@ -58,7 +58,7 @@
     }
    ],
    "source": [
-    "data = Cn2.read_csv('data_sample.csv')\n",
+    "data = Cn2.read_csv('Cn2_Tenerife.csv')\n",
     "data.rm_zeros()\n",
     "data.set_ground_level(inplace = True)\n",
     "data.filtre(50)"
